--- a/ContactList/Base.lproj/Main.storyboard
+++ b/ContactList/Base.lproj/Main.storyboard
@@ -8,23 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="u7a-Uu-lJJ">
-            <objects>
-                <viewController id="MEE-KW-PnL" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="lFz-C2-OYm">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="qpi-QT-az4"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="a7d-nv-M1R"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ut2-Oy-L4e" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-318" y="1515"/>
-        </scene>
-        <!--Item-->
+        <!--Contacts-->
         <scene sceneID="UMd-vg-TSA">
             <objects>
                 <tableViewController id="McH-2U-WEz" customClass="ContactTableViewController" customModule="ContactList" customModuleProvider="target" sceneMemberID="viewController">
@@ -47,27 +31,54 @@
                             <outlet property="delegate" destination="McH-2U-WEz" id="9qi-ek-CUg"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Item" id="zD4-9g-XFo"/>
+                    <tabBarItem key="tabBarItem" title="Contacts" image="person.fill" catalog="system" id="zD4-9g-XFo"/>
                     <navigationItem key="navigationItem" id="NnT-gP-bZu"/>
                     <connections>
-                        <segue destination="725-1K-nsU" kind="show" id="Lsd-W9-qeQ"/>
+                        <segue destination="725-1K-nsU" kind="show" identifier="showDetails" id="Lsd-W9-qeQ"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dv6-tD-4QZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1740" y="297"/>
         </scene>
-        <!--View Controller-->
+        <!--Detailed Info View Controller-->
         <scene sceneID="fTi-xw-HKC">
             <objects>
-                <viewController id="725-1K-nsU" sceneMemberID="viewController">
+                <viewController id="725-1K-nsU" customClass="DetailedInfoViewController" customModule="ContactList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VX3-DV-7QB">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="80g-5c-7aH">
+                                <rect key="frame" x="16" y="175" width="48" height="69"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nFx-bB-Tdb">
+                                        <rect key="frame" x="0.0" y="0.0" width="48" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SNn-3e-OeZ">
+                                        <rect key="frame" x="0.0" y="45" width="48" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="9Yw-HR-eNT"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="80g-5c-7aH" firstAttribute="top" secondItem="9Yw-HR-eNT" secondAttribute="top" constant="20" id="X48-5K-w1L"/>
+                            <constraint firstItem="80g-5c-7aH" firstAttribute="leading" secondItem="9Yw-HR-eNT" secondAttribute="leading" constant="16" id="du5-DK-zsJ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="mSP-yU-NUb"/>
+                    <connections>
+                        <outletCollection property="infoLabels" destination="nFx-bB-Tdb" collectionClass="NSMutableArray" id="TAt-8X-PaS"/>
+                        <outletCollection property="infoLabels" destination="SNn-3e-OeZ" collectionClass="NSMutableArray" id="hMn-LZ-d8X"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ayp-Sp-k17" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -77,8 +88,8 @@
         <scene sceneID="Qns-HV-eAJ">
             <objects>
                 <navigationController id="iNB-ia-EkD" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="urs-OR-I9c">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="urs-OR-I9c">
+                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -89,13 +100,14 @@
             </objects>
             <point key="canvasLocation" x="2269" y="-1228"/>
         </scene>
-        <!--Tab Bar View Controller-->
+        <!--Persons List-->
         <scene sceneID="SW7-K1-xGh">
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Dxq-vO-Z7p" customClass="TabBarViewController" customModule="ContactList" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="JQK-2R-dHw"/>
+                    <navigationItem key="navigationItem" title="Persons List" id="JQK-2R-dHw"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fLo-vl-vu9">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -108,7 +120,7 @@
             </objects>
             <point key="canvasLocation" x="2270.7692307692305" y="-441.46919431279616"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Table View Controller-->
         <scene sceneID="iQo-eZ-m3D">
             <objects>
                 <tableViewController id="Qga-ue-Sne" sceneMemberID="viewController">
@@ -131,17 +143,17 @@
                             <outlet property="delegate" destination="Qga-ue-Sne" id="b2F-Kq-tr0"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="mop-ST-hpb"/>
+                    <navigationItem key="navigationItem" id="mop-ST-hpb"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0cY-2I-YSw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2828" y="1041"/>
         </scene>
-        <!--Item-->
+        <!--Contacts-->
         <scene sceneID="GET-4T-Bvb">
             <objects>
                 <navigationController id="p2j-U3-k2N" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="a4g-zA-PM8"/>
+                    <tabBarItem key="tabBarItem" title="Contacts" image="person" catalog="system" id="a4g-zA-PM8"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Kav-Lb-LBs">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -156,6 +168,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="person" catalog="system" width="128" height="121"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
